<resources>
    <string name="app_name">Best Famous Quotes</string>
    <string name="liked">Liked</string>
    <string name="home">Home</string>
    <string name="quote">Quote</string>
    <string name="clear">Clear</string>
    <string name="refresh">Refresh</string>
    <string name="love">love</string>
    <string name="life">life</string>
    <string name="wisdom">wisdom</string>
    <string name="motivation">motivation</string>
    <string name="funny">funny</string>

    <string name="copyClipboard">Added to Starred</string>
</resources>
