<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/filter_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:visibility="visible"
    app:layout_collapseMode="parallax"
    android:background="@color/toolbar_color"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp">

        <Button
            android:id="@+id/love"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/love"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:padding="4dp"
            android:minWidth="0dp"
            android:minHeight="0dp"/>

        <Button
            android:id="@+id/funny"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/funny"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:padding="5dp"
            android:minWidth="0dp"
            android:minHeight="0dp"/>

        <Button
            android:id="@+id/life"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/life"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:padding="5dp"
            android:minWidth="0dp"
            android:minHeight="0dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/motivation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/motivation"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:padding="5dp"
            android:minWidth="0dp"
            android:minHeight="0dp"/>

        <Button
            android:id="@+id/wisdom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:text="@string/wisdom"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:padding="5dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>
</LinearLayout>